--- a/OperacionesMFilesNF/OperacionesMFilesNF.csproj
+++ b/OperacionesMFilesNF/OperacionesMFilesNF.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsultarDocumentos.cs" />
+    <Compile Include="MFilesDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
