--- a/OperacionesMFilesNF/OperacionesMFiles.csproj
+++ b/OperacionesMFilesNF/OperacionesMFiles.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OperacionesMFilesNF</RootNamespace>
-    <AssemblyName>OperacionesMFilesNF</AssemblyName>
+    <AssemblyName>OperacionesMFiles</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsultarDocumentos.cs" />
+    <Compile Include="IntegracionMFiles.cs" />
     <Compile Include="MFilesDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
