Optimizados web.config params

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,35 +9,41 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-  
-  
-    <add key="MFILES_SERVER" value = "http://127.0.0.1:80/M-Files/"/>
-    <add key="MFILES_VAULT" value = "{799F0633-EBFD-4597-9007-D8EFCE35E200}"/>
-    <add key="MFILES_USER" value = "administrador"/>
-    <add key="MFILES_PASS" value = "mf"/>
-    
-    <add key="MFILES_ERP_ID" value="1077"/>
-    <add key="MFILES_EMPRESA" value="1020"/>
-    <add key="MFILES_NUM_DOCUMENTO" value="1023"/>
-    <add key="MFILES_NUM_FACTURA_RETENIDA" value="1025"/>
-    <add key="MFILES_RUC_EMISOR" value="1073"/>
-    <add key="MFILES_FECHA_EMISION" value="1034"/>
-    <add key="MFILES_VALOR" value="1039"/>
-    
-  
-  
+    <add key="MFILES_SERVER" value="http://127.0.0.1:80/M-Files/"/>
+    <add key="MFILES_VAULT" value="{799F0633-EBFD-4597-9007-D8EFCE35E200}"/>
+    <add key="MFILES_USER" value="administrador"/>
+    <add key="MFILES_PASS" value="mf"/>
+
+    <!--
+    <add key="MFILES_SERVER" value="http://127.0.0.1/"/>
+  -->
+
+    <add key="CODIGO_ERP" value="1077"/>
+    <add key="EMPRESA" value="1020"/>
+    <add key="NUM_DOCUMENTO" value="1023"/>
+    <add key="NUM_FACTURA_RETENIDA" value="1025"/>
+    <add key="RUC_EMISOR" value="1073"/>
+    <add key="FECHA_EMISION" value="1034"/>
+    <add key="VALOR" value="1039"/>
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6" />
+      </system.Web>
+  -->
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
-    <httpRuntime targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.6"/>
   </system.web>
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
       <remove name="OPTIONSVerbHandler"/>
       <remove name="TRACEVerbHandler"/>
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
-        preCondition="integratedMode,runtimeVersionv4.0"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
   <runtime>
@@ -74,12 +80,8 @@
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
 </configuration>
