Loggin ok, falta mejorar mensajes e implementarlos en todos los métodos y errores

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+   <configSections>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />  
+  </configSections>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -99,4 +103,33 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+
+ 
+  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">  
+    <targets>  
+        <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />  
+        <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source=" My Custom Api Services" />  
+        <target name="database" type="Database" connectionString="Data Source=DESKTOP-HJ7QFCB\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
+            <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], UserId, Exception, StackTrace) values (@TimeStamp, @Level, @Logger, @Message, case when len(@UserID) = 0 then null else @UserId end, @Exception, @StackTrace); </commandText>  
+            <parameter name="@TimeStamp" layout="${date}" />  
+            <parameter name="@Level" layout="${level}" />  
+            <parameter name="@Logger" layout="${logger}" />  
+            <parameter name="@Message" layout="${message}" />  
+            <parameter name="@UserId" layout="${mdc:user_id}" />  
+            <parameter name="@Exception" layout="${exception}" />  
+            <parameter name="@StackTrace" layout="${stacktrace}" />  
+            <dbProvider>System.Data.SqlClient</dbProvider>  
+        </target>  
+    </targets>  
+    <rules>  
+        <!-- I am adding my 3 logging rules here -->  
+        <logger name="*" minlevel="Debug" writeTo="database" />  
+        <logger name="*" minlevel="Trace" writeTo="logfile" />  
+        <logger name="*" minlevel="Trace" writeTo="eventlog" />  
+    </rules>  
+  </nlog>  
+
+
+
 </configuration>
