Mensajes de error actualizados y logging de requests

--- a/OperacionesMFilesNF/OperacionesMFiles.csproj
+++ b/OperacionesMFilesNF/OperacionesMFiles.csproj
@@ -35,6 +35,9 @@
     <Reference Include="MFaaP.MFWSClient">
       <HintPath>..\MFaaP.MFWSClient.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp">
       <HintPath>..\RestSharp.dll</HintPath>
     </Reference>
@@ -51,6 +54,9 @@
     <Compile Include="IntegracionMFiles.cs" />
     <Compile Include="MFilesDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
