--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -109,24 +109,19 @@
   <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">  
     <targets>  
         <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />  
-        <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source=" My Custom Api Services" />  
         <target name="database" type="Database" connectionString="Data Source=DESKTOP-HJ7QFCB\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
-            <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], UserId, Exception, StackTrace) values (@TimeStamp, @Level, @Logger, @Message, case when len(@UserID) = 0 then null else @UserId end, @Exception, @StackTrace); </commandText>  
+            <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>  
             <parameter name="@TimeStamp" layout="${date}" />  
             <parameter name="@Level" layout="${level}" />  
             <parameter name="@Logger" layout="${logger}" />  
             <parameter name="@Message" layout="${message}" />  
-            <parameter name="@UserId" layout="${mdc:user_id}" />  
-            <parameter name="@Exception" layout="${exception}" />  
             <parameter name="@StackTrace" layout="${stacktrace}" />  
             <dbProvider>System.Data.SqlClient</dbProvider>  
         </target>  
     </targets>  
     <rules>  
-        <!-- I am adding my 3 logging rules here -->  
         <logger name="*" minlevel="Debug" writeTo="database" />  
         <logger name="*" minlevel="Trace" writeTo="logfile" />  
-        <logger name="*" minlevel="Trace" writeTo="eventlog" />  
     </rules>  
   </nlog>  
 
