Se agregó la condición de búsqueda por Estado de Workflow

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -22,13 +22,16 @@
     <add key="MFILES_SERVER" value="http://127.0.0.1/"/>
   -->
 
+    <add key="Estado"       value="39" />
+    <add key="IDEstado"     value="180" />
+    
+    
     <add key="CodigoERP" value="1077" />
     <add key="Empresa" value="1020" />
-    <add key="Departamento" value="1020" />
-    <add key="NumDocumento" value="1023" />
-    <add key="NumRetencion" value="1023" />
-    <add key="NumFactura" value="1025" />
-    <add key="RucEmisor" value="1073" />
+    <add key="NumDocumento" value="1028" />
+    <add key="NumRetencion" value="1074" />
+    <add key="NumFactura" value="1076" />
+    <add key="RucEmisor" value="1024" />
     <add key="FechaEmision" value="1034" />
     <add key="Valor" value="1039" />
     <add key="Clase" value="100" />
