Cada método se indexa cuando el documento está en su estado respectivo

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -23,11 +23,15 @@
   -->
 
     <add key="Estado"       value="39" />
-    <add key="IDEstado"     value="180" />
+    <add key="IDEstado"          value="180" />
+    <add key="IDEstadoRetencion" value="215" />
+    <add key="IDEstadoNota"      value="180" />
+    <add key="IDEstadoImport"    value="181" />
     
     
     <add key="CodigoERP" value="1077" />
     <add key="Empresa" value="1020" />
+    <add key="Departamento" value="1053" />
     <add key="NumDocumento" value="1028" />
     <add key="NumRetencion" value="1074" />
     <add key="NumFactura" value="1076" />
