Agregado método para descargar archivos y metadata

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -5,40 +5,20 @@
   -->
 <configuration>
    <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />  
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
-  
+
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="MFILES_SERVER" value="http://127.0.0.1:80/M-Files/" />
-    <add key="MFILES_VAULT" value="{799F0633-EBFD-4597-9007-D8EFCE35E200}" />
-    <add key="MFILES_USER" value="administrador" />
-    <add key="MFILES_PASS" value="mf" />
+    <add key="MFILES_VAULT" value="{FF895B27-E23E-4094-9CC1-CBFA666EF573}" />
+    <add key="MFILES_USER" value="admin" />
+    <add key="MFILES_PASS" value="admin" />
 
-    <!--
-    <add key="MFILES_SERVER" value="http://127.0.0.1/"/>
-  -->
-
-    <add key="Estado"       value="39" />
-    <add key="IDEstado"          value="180" />
-    <add key="IDEstadoRetencion" value="215" />
-    <add key="IDEstadoNota"      value="180" />
-    <add key="IDEstadoImport"    value="181" />
-    
-    
-    <add key="CodigoERP" value="1077" />
-    <add key="Empresa" value="1020" />
-    <add key="Departamento" value="1053" />
-    <add key="NumDocumento" value="1028" />
-    <add key="NumRetencion" value="1074" />
-    <add key="NumFactura" value="1076" />
-    <add key="RucEmisor" value="1024" />
-    <add key="FechaEmision" value="1034" />
-    <add key="Valor" value="1039" />
-    <add key="Clase" value="100" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -116,7 +96,7 @@
   <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">  
     <targets>  
         <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />  
-        <target name="database" type="Database" connectionString="Data Source=DESKTOP-HJ7QFCB\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
+        <target name="database" type="Database" connectionString="Data Source=DESKTOP-IO70EM3\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
             <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>  
             <parameter name="@TimeStamp" layout="${date}" />  
             <parameter name="@Level" layout="${level}" />  
