--- a/MFilesWebAPI/packages.config
+++ b/MFilesWebAPI/packages.config
@@ -30,6 +30,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="NLog" version="4.7.5" targetFramework="net472" />
+  <package id="RestSharp" version="106.10.1" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
