se recibe formato esperado de json

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -15,9 +15,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="MFILES_SERVER" value="http://127.0.0.1:80/M-Files/" />
-    <add key="MFILES_VAULT" value="{FF895B27-E23E-4094-9CC1-CBFA666EF573}" />
+    <add key="MFILES_VAULT" value="{8623BFB2-A539-4583-BDD2-AD2E377AA7D9}" />
     <add key="MFILES_USER" value="admin" />
-    <add key="MFILES_PASS" value="admin" />
+    <add key="MFILES_PASS" value="mf" />
 
   </appSettings>
   <!--
