--- a/OperacionesMFilesNF/OperacionesMFiles.csproj
+++ b/OperacionesMFilesNF/OperacionesMFiles.csproj
@@ -53,7 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IntegracionMFiles.cs" />
+    <Compile Include="DinersDocument.cs" />
     <Compile Include="MFilesDocument.cs" />
+    <Compile Include="DinersSearchDocument.cs" />
     <Compile Include="MFilesSearchDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
