--- a/OperacionesMFilesNF/OperacionesMFiles.csproj
+++ b/OperacionesMFilesNF/OperacionesMFiles.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{70E351FF-BE53-42E4-8F38-D6175ACC287B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OperacionesMFilesNF</RootNamespace>
+    <RootNamespace>OperacionesMFiles</RootNamespace>
     <AssemblyName>OperacionesMFiles</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DinersResultDocument.cs" />
+    <Compile Include="ErrorClass.cs" />
     <Compile Include="IntegracionMFiles.cs" />
     <Compile Include="MFilesDocument.cs" />
     <Compile Include="DinersSearchDocument.cs" />
