--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -97,15 +97,15 @@
     <targets>  
         <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />  
         
-          <target name="database" type="Database" connectionString="Data Source=DESKTOP-IO70EM3\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
-            <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>  
-            <parameter name="@TimeStamp" layout="${date}" />  
-            <parameter name="@Level" layout="${level}" />  
-            <parameter name="@Logger" layout="${logger}" />  
-            <parameter name="@Message" layout="${message}" />  
-            <parameter name="@StackTrace" layout="${stacktrace}" />  
-            <dbProvider>System.Data.SqlClient</dbProvider>  
-        </target>
+        <target name="database" type="Database" connectionString="Data Source=DS-I8\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
+          <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>  
+          <parameter name="@TimeStamp" layout="${date}" />  
+          <parameter name="@Level" layout="${level}" />  
+          <parameter name="@Logger" layout="${logger}" />  
+          <parameter name="@Message" layout="${message}" />  
+          <parameter name="@StackTrace" layout="${stacktrace}" />  
+          <dbProvider>System.Data.SqlClient</dbProvider>  
+      </target>
     </targets>  
     <rules>  
         <logger name="*" minlevel="Debug" writeTo="database" />  
