Búsqueda en SQL agregada, optimizado

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -4,21 +4,21 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
-   <configSections>
+  <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
-
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="MFILES_SERVER" value="http://127.0.0.1:80/M-Files/" />
-    <add key="MFILES_VAULT" value="{8623BFB2-A539-4583-BDD2-AD2E377AA7D9}" />
+    <add key="MFILES_VAULT" value="{793BC541-9CDD-44BF-9518-F63493B3A44F}" />
     <add key="MFILES_USER" value="admin" />
     <add key="MFILES_PASS" value="mf" />
-
+    <add key="DB_CONNECTION" value="Server=DS-I8\SQLEXPRESS;Database=Diners;User Id=testWS;Password=sa;"/>
+    
+    
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -90,29 +90,26 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-
-
- 
-  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">  
-    <targets>  
-        <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />  
-        
-        <target name="database" type="Database" connectionString="Data Source=DS-I8\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">  
-          <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>  
-          <parameter name="@TimeStamp" layout="${date}" />  
-          <parameter name="@Level" layout="${level}" />  
-          <parameter name="@Logger" layout="${logger}" />  
-          <parameter name="@Message" layout="${message}" />  
-          <parameter name="@StackTrace" layout="${stacktrace}" />  
-          <dbProvider>System.Data.SqlClient</dbProvider>  
+  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />
+      <target name="database" type="Database" connectionString="Data Source=DS-I8\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">
+        <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>
+        <parameter name="@TimeStamp" layout="${date}" />
+        <parameter name="@Level" layout="${level}" />
+        <parameter name="@Logger" layout="${logger}" />
+        <parameter name="@Message" layout="${message}" />
+        <parameter name="@StackTrace" layout="${stacktrace}" />
+        <dbProvider>System.Data.SqlClient</dbProvider>
       </target>
-    </targets>  
-    <rules>  
-        <logger name="*" minlevel="Debug" writeTo="database" />  
-        <logger name="*" minlevel="Trace" writeTo="logfile" />  
-    </rules>  
-  </nlog>  
-
-
-
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Debug" writeTo="database" />
+      <logger name="*" minlevel="Trace" writeTo="logfile" />
+    </rules>
+  </nlog>
+  <connectionStrings>
+    <add name="DBImageNow_ExportEntities" connectionString="metadata=res://*/Models.db.csdl|res://*/Models.db.ssdl|res://*/Models.db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=DBImageNow_Export;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DinersEntities" connectionString="metadata=res://*/Models.db.csdl|res://*/Models.db.ssdl|res://*/Models.db.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Diners;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
