Se agrega el context como condición de búsqueda

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -16,7 +16,7 @@
     <add key="MFILES_VAULT" value="{793BC541-9CDD-44BF-9518-F63493B3A44F}" />
     <add key="MFILES_USER" value="admin" />
     <add key="MFILES_PASS" value="mf" />
-    <add key="DB_CONNECTION" value="Server=DS-I8\SQLEXPRESS;Database=Diners;User Id=testWS;Password=sa;"/>
+    <add key="DB_CONNECTION" value="Server=I8-DS\SQLEXPRESS;Database=Diners;User Id=sa;Password=ImageNow!;"/>
     
     
   </appSettings>
