Fixed everything, I guess!

--- a/MFilesWebAPI/Web.config
+++ b/MFilesWebAPI/Web.config
@@ -93,7 +93,7 @@
   <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="logfile" xsi:type="File" fileName="${basedir}/MyLogs/${date:format=yyyy-MM-dd}-api.log" />
-      <target name="database" type="Database" connectionString="Data Source=DS-I8\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=sa;">
+      <target name="database" type="Database" connectionString="Data Source=I8-DS\SQLEXPRESS;Initial Catalog=WebApiLog;Persist Security Info=True;User ID=sa;Password=ImageNow!;">
         <commandText> insert into ExceptionLog ([TimeStamp],[Level],Logger, [Message], StackTrace) values (@TimeStamp, @Level, @Logger, @Message, @StackTrace); </commandText>
         <parameter name="@TimeStamp" layout="${date}" />
         <parameter name="@Level" layout="${level}" />
