--- a/OperacionesMFilesNF/packages.config
+++ b/OperacionesMFilesNF/packages.config
@@ -3,5 +3,6 @@
   <package id="Dapper" version="2.0.123" targetFramework="net472" />
   <package id="MFaaP.MFWSClient" version="1.2.1-alpha" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NLog" version="4.7.13" targetFramework="net472" />
   <package id="RestSharp" version="106.10.1" targetFramework="net472" />
 </packages>
